# Jarvis

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.py
jarvis/: __init__.py  agent.py  config.py  listen_loop.py  llm.py  main.py  schemas.py  stt_test.py  tts_test.py  wake_word_test.py
jarvis/static/: app.js  index.html  styles.css
jarvis/tools/: __init__.py  browser.py  files.py  registry.py  terminal.py
scripts/: smoke_tools.py
